close #999. also fix for previous bug with display name truncation.

--- a/src/sass/mobile/_mobile-composer.scss
+++ b/src/sass/mobile/_mobile-composer.scss
@@ -9,4 +9,7 @@
 	.composer-footer .text-muted {
 		display: none;
 	}
+	#composerFrame {
+		position: static !important;
+	}
 }
