--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -26,13 +26,6 @@
             }
         }
     }
-    #headerDisplayName {
-        width: 14rem;
-        overflow: hidden;
-        display: inline-block;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-    }
     .navbar-text {
         margin-right: 0;
         margin-left: 0;
